# exampe_pip_package

./: .gitignore  README.md  setup.cfg  setup.py
test-requirements_type-example/: main.py  run.sh
tests-exampe_pip_package-examples/pip_test.get_info/: pip_test.get_info
