# https://pypi.org/project/setupcfg-generator/
[metadata]
name = exampe_pip_package
version = 2019.8.9
url = https://github.com/XingangShi/exampe_pip_package.git
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = exampe_pip_package

[options]
install_requires =
    public
    setuptools
    values
packages =
    exampe_pip_package
